# canctl

./: .gitignore  CLAUDE.md  CLI_REFERENCE.md  entry.py  pyproject.toml
.github/workflows/: release.yml
canctl/: canctl.py  remote.py
canctl/cmd/: decode.py  hw.py  monitor.py  play.py  recv.py  send.py
canctl/core/: bus.py  dbc.py  errors.py  filter.py  jsonl.py  message.py  output.py  periodic.py
tests/: sample_capture.jsonl  test.dbc  test_commands.py  test_core.py  test_remote.py
